delete,add and most of the complete works(still need fixis). the apis, quote dont want to to get request (see it later --> maybe i got the url wrong), the unsplash half ready and still need twiks/fixis and the weather api still without any touch

--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -5,3 +5,7 @@
     word-wrap: break-word;
     margin: 0 auto;
 }
+.CompStyle{
+    background-color: #b0abab;
+    text-decoration: line-through;
+}
