--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body, html {
 }
 
 .top-right {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     background-color: #ffffff;
